--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,8 @@
     ],
     "require": {
         "streams/core": "^2.0",
-        "orchestra/testbench-core": "^6.27",
-        "laravel/framework": "^8.71",
-        "laravel/laravel": "8.x-dev",
+        "orchestra/testbench": "^6.27",
         "mockery/mockery": "^1.4.4",
-        "orchestra/canvas": "^6.1",
         "phpunit/phpunit": "^8.5.21 || ^9.5.10 || ^10.0",
         "spatie/laravel-ray": "^1.7.1",
         "symfony/process": "^5.0"
