--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,7 @@
     ],
     "require": {
         "streams/core": "^2.0",
-        "orchestra/testbench": "^6.0",
-        "mockery/mockery": "^1.4.4",
-        "phpunit/phpunit": "^8.5.21 || ^9.5.10 || ^10.0",
-        "spatie/laravel-ray": "^1.7.1",
-        "symfony/process": "^5.0"
+        "orchestra/testbench": "^7.0"
     },
     "autoload": {
         "psr-4": {
