--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,16 @@
     ],
     "require": {
         "streams/core": "^2.0",
-        "orchestra/testbench": "^7.0"
+        "orchestra/testbench": "^6.0"
     },
     "autoload": {
         "psr-4": {
             "Streams\\Testing\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Streams\\Testing\\Tests\\": "tests/"
         }
     },
     "extra": {
@@ -22,5 +27,7 @@
             "dev-1.0": "1.x-dev"
         }
     },
-    "license": "MIT"
+    "license": "MIT",
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
