--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -1,28 +1,15 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
-    "license": "MIT",
+    "name": "streams/streams",
+    "description": "Streams testing utilities.",
     "type": "project",
-    "require": {
-        "laravel/framework": "~5.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "~4.0"
-    },
+    "license": "MIT",
+    "keywords": [],
+    "authors": [],
+    "require": {},
+    "require-dev": {},
     "autoload": {
-        "classmap": [
-            "database",
-            "tests/TestCase.php"
-        ],
         "psr-4": {
             "App\\": "app/"
         }
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": []
-        }
-    },
-    "minimum-stability": "dev"
+    }
 }
