--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,15 @@
     ],
     "require": {
         "streams/core": "^2.0",
-        "orchestra/testbench": "^6.0"
+        "orchestra/testbench": "^6.0",
+        "streams/test-addon": "*"
     },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "addons/streams/test-addon"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "Streams\\Testing\\": "src/"
