--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
             "Streams\\Testing\\Tests\\": "tests/"
         }
     },
+    "post-autoload-dump": [
+        "@php artisan package:discover --ansi"
+    ],
     "extra": {
         "branch-alias": {
             "dev-1.0": "1.x-dev"
