--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     ],
     "require": {
         "streams/core": "^2.0",
-        "orchestra/testbench": "^6.0",
-        "streams/test-addon": "*"
+        "orchestra/testbench": "^6.0"
     },
     "autoload": {
         "psr-4": {
