--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -3,10 +3,16 @@
     "description": "Streams testing utilities.",
     "type": "project",
     "license": "MIT",
+    "prefer-stable": true,
+    "minimum-stability": "dev",
     "keywords": [],
     "authors": [],
-    "require": {},
-    "require-dev": {},
+    "require": {
+        "streams/core": "^2.0"
+    },
+    "require-dev": {
+        "streams/testing": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
