--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     ],
     "require": {
         "streams/core": "^2.0",
+        "brianium/paratest": "^6.4",
         "orchestra/testbench": "^6.0"
     },
     "autoload": {
